# SoftHand-Plugin

./: README.md  Readme.MD
softhand_plugin/: CMakeLists.txt  package.xml
softhand_plugin/include/softhand_plugin/: softhand_mimic_plugin.h  softhand_plugin.h
softhand_plugin/src/: softhand_mimic_plugin.cpp  softhand_plugin.cpp
softhands_description/: CMakeLists.txt  package.xml
softhands_description/config/: softhand.rviz  softhands.rviz  softhands_v2.rviz  softhands_v2_gazebo.rviz  wide.yaml
softhands_description/launch/: main.launch  qb_robot_description_bringup.launch  rviz.launch  rviz_softhand_v1.launch  rviz_softhand_v2.launch  softhand_gazebo.launch  softhand_v1_gazebo.launch  softhand_v2_gazebo.launch  softhands_gazebo.launch  test.launch  test_finger.launch  test_finger_gazebo.launch  v2_SHs_gazebo.launch  v2_gazebo.launch  v2s_gazebo_article.launch
softhands_description/launch/old/: rviz.launch  softhand_v1_gazebo.launch  test_finger_gazebo_NEW.launch  v2s_gazebo.launch
softhands_description/meshes/old/v1.0/: soft_hand1_03_m.stl
softhands_description/meshes/softhands/v1.0/: base_soft_hand1_03_m.stl
softhands_description/meshes/v1.0_wide/right/: phalanx_dist_thumb.stl  phalanx_pros_thumb.stl
softhands_description/meshes/v1.2_research/right/: ph_distal.stl
softhands_description/meshes/v1_2_research/left/: ph_medium.stl  ph_short.stl
softhands_description/meshes/v1_2_research/right/: flange_iso_04_collision.stl  ph_distal.stl  ph_distal_collision.stl  ph_short_collision.stl
softhands_description/meshes/v1_wide/left/: palm_central.stl  palm_central_collision.stl  palm_little.stl  palm_little_collision.stl  palm_thumb.stl  palm_thumb_collision.stl  phalanx_dist_collision.stl  phalanx_dist_thumb.stl  phalanx_dist_thumb_collision.stl  phalanx_medium_thumb_collision.stl  phalanx_pros_sup.stl  phalanx_pros_sup_collision.stl  phalanx_pros_thumb.stl  phalanx_pros_thumb_collision.stl  sh_iso_interface_vw.stl  thumb_support_collision.stl
softhands_description/meshes/v1_wide/right/: palm_central.stl  palm_central_collision.stl  palm_little.stl  palm_little_collision.stl  palm_thumb.stl  palm_thumb_collision.stl  phalanx.stl  phalanx_collision.stl  phalanx_dist.stl  phalanx_dist_thumb_collision.stl  phalanx_medium_thumb.stl  phalanx_medium_thumb_collision.stl  phalanx_pros_sup.stl  (+5 more)
softhands_description/models/: bicchiere_mano.stl  bicchiere_mano_collision.stl
softhands_description/rviz/: softhand.rviz
softhands_description/urdf/: left_sh12_research.urdf  qbhand_copy.urdf.xacro  right_sh12_research.urdf  sh_1_2_research.urdf  softhand.urdf.xacro  softhand_right_v1.urdf.xacro  softhand_v1.urdf.xacro  softhands.urdf.xacro  softhands.xacro  test.urdf  test_SHs.urdf.xacro  test_SHs_v2.urdf.xacro  test_SHs_v2s.urdf.xacro  test_sh_old.urdf.xacro  test_v1wide.urdf
softhands_description/urdf/config/: params_v3.yaml
softhands_description/urdf/old/: softhands.xacro  test_SHs.urdf.xacro  test_SHs_v2.urdf.xacro  test_SHs_v2s.urdf.xacro
softhands_description/urdf/test_finger/: finger.world  finger_mimic.xacro  finger_simple.xacro  finger_simple_trans.xacro  finger_simple_trans_NEW.xacro  test_FINGER.xacro  test_FINGER_NEW.xacro
softhands_description/urdf/v1.0/: finger.xacro  sh_v1.xacro  thumb.xacro
softhands_description/urdf/v1.0_simple/: finger.xacro  sh_v1_simple.xacro  thumb.xacro
softhands_description/urdf/v2.0/: finger.xacro  sh_v2.xacro  thumb.xacro
softhands_description/urdf/v2.0_simple/: finger.xacro  sh_v2_simple.xacro  thumb.xacro
softhands_description/urdf/xacro/: header.xacro  sh_v1_simple.xacro  test_sh_old.xacro  v1.0_simple.xacro  v1.0_wide.xacro  v1.2_research.xacro  v1_2_research.xacro  v1_simple.xacro  v1_wide.xacro  v2.0_qb.xacro  v2.xacro  v3.xacro  v3_simple.xacro  v_wide.xacro
softhands_description/worlds/: article_objects.world  box.world  empty.world  front_view.world  softhands.world
softhands_plugin/: CMakeLists.txt  package.xml
softhands_plugin/include/softhands_plugin/: softhands_mimic_plugin.h  softhands_mimic_two_plugin.h  softhands_mimic_two_plugin_qb.h  softhands_plugin.h  softhands_synergy_plugin.h
softhands_plugin/src/: softhands_mimic_plugin.cpp  softhands_mimic_two_plugin.cpp  softhands_mimic_two_plugin_qb.cpp  softhands_plugin.cpp  softhands_synergy_plugin.cpp
(+210 files in other folders)
